
.............This file lists all changes to qhull and rbox.....................

------------
Need help
 - The C++ interface needs work.  Give it a try and make it better.
   http://gitorious.org/qhull/
 - Produce conformant triangulations for merged facets using option 'Qt' 
 - Add CMakeLists.txt for qhullcpp, user_eg3, cpp/, and cpp/road
   If practical, please move CMakeLists.txt to project/
 - Verify -fno-strict-aliasing needed for gcc 4.1, 4.2, 4.3 (qset segfault)
 - Set up debian build [Pkg-octave-devel]
   Please keep debian files in config/ and project/debian/
   Branch 'debian' is from http://savannah.nongnu.org/cvs/?group=qhull
   project/debian needs updating for its new location.

To do
 - Review email for doc changes
 - RMP build of Qhull
 - Create signed tags for Qhull versions
 - Add FIXUP for known problems and update wiki
 - Notes to compgeom on conformant triangulation and Voronoi volume
 

------------
gitorious.org/qhull 2010/01/25
- qh-optf.htm: Add note about order of 'Fn' matching 'Fv' order [Q. Pan]
- Fixed src/CMakeLists.txt [M. Moll]
- Add .gitignore with ignored files and directories.  
-   Use .git/info/exclude for locally excluded files.

------------
gitorious.org/qhull 2010/01/23
- Reviewed all copy constructors and copy assignments.  Updated comments.
   Defined Qhull copy constructor and copy assignment [G. Rivet-Sabourin]
   Disabled UsingQhullLib default constructor, copy construct, and copy assign 
- Add #error to Qhull.h if qh_QHpointer is not defined
- Define MSG_QHULL_ERROR in user.h
- Move MSG_FIXUP to 11000 and updated FIXUP QH11...
- Add patch for old builds in qh-get.htm
- Add eg/q_test to libqhull.pro
  Add note to q_test than R1e-3 may error (qh-code.htm, Enhancements)
- Added C++ compiling instructions to README.txt
  Add instructions for fixing the DOS window
- Updated CMakeLists.txt to compile shared and static libraries and link the 
   command line utilities to the shared one.  Allows install of 