@@ -65,7 +65,8 @@ and higher. </p>
                 www.qhull.org
         <p>
     <li><a href="http://www.qhull.org/news/qhull-news.html#users">How</a> is Qhull used?</li>
-        <li><a href="http://citeseerx.ist.psu.edu/showciting?doi=10.1.1.117.405&sort=cite">CiteSeer</a> references to Qhull
+        <li><a href="http://citeseerx.ist.psu.edu/showciting?doi=10.1.1.117.405&sort=cite">CiteSeer</a>
+        and <a href="http://scholar.google.com/scholar?cites=6731193060570243661&hl=en&as_sdt=40000000">Google Scholar</a> references to Qhull
 </p>
         <li>
         <a href=http://www.google.com/search?as_q=qhull+-debian+-cvs+-gentoo+-pool+-mirrors&num=100>Google</a> Qhull,
